--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ langchain = "^0.0.160"
 pydub = "^0.25.1"
 simpleaudio = "^1.0.4"
 gtts = "^2.3.2"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 taskipy = "^1.10.4"
